--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,6 +17,19 @@
       background-color: red;
       
     }
+
+    .custom-underline-heading::after{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 50%;
+      height: 4px;
+      background-color: red; 
+    }
+    
+   
+
   }
   
 
